<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">


        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="30dp"
            android:id="@+id/logo"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/welcome"
            android:textColor="@color/buttonBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/textColor"
            android:textSize="20dp" />


        <TextView

            android:id = "@+id/btnchat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:text="Join a Table"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textSize="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:text="@string/profile"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:layout_centerHorizontal="true"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:text="@string/btn_logout"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:textColor="@color/textColor"
            android:layout_centerHorizontal="true"
            android:textSize="20dp" />

    </LinearLayout>


</RelativeLayout>